<resources>
    <string name="app_name">MobiQC</string>
    <string name="version_app_name">MobiQC v%1$s</string>
    <string name="api_key_storage">7d2ea261075fb6f251a66af89b6b4bb597de89b0</string>
    <string name="google_maps_key">AIzaSyBNKRpluxm-gYRusWsAmp_a0WjbszrmwnE</string>
    <string name="Helvetica">fonts/Helvetica.ttf</string>
    <string name="Helvetica_Bold">fonts/Helvetica-Bold.ttf</string>
    <string name="Helvetica_light">fonts/Helvetica-light.ttf</string>
    <string name="login_mobi_qc">MobiQC</string>
    <string name="login_user">Tài khoản</string>
    <string name="login_pass">Mật khẩu</string>
    <string name="login_show_pass">Hiển thị mật khẩu</string>
    <string name="action_sign_in">ĐĂNG NHẬP</string>
    <string name="action_ok">Đồng ý</string>
    <string name="action_cancel">Hủy bỏ</string>
    <string name="title_dialog">Thông báo</string>
    <string name="content_logout">Bạn có muốn thoát MobiQC?</string>
    <string name="message_permission">Chưa đủ quyền truy cập của ứng dụng. Bạn có muốn vào cài đặt không ?</string>
    <string name="error_acc_empty">Tài khoản không được bỏ trống.</string>
    <string name="error_acc_validate">Không đúng định dạng Email.</string>
    <string name="error_pass_empty">Mật khẩu không được bỏ trống.</string>
    <string name="error_pass_validate">Mật khẩu ít nhất 4 ký tự.</string>
    <string name="menu_ks_dich_vu">KS DỊCH VỤ</string>
    <string name="menu_kt_hop_dong">- Kiểm tra hợp đồng</string>
    <string name="menu_cap_nhat_loi">- Cập nhật lỗi</string>
    <string name="menu_tao_check_list">- Tạo Checklist</string>
    <string name="menu_tao_pre_check_list">- Tạo PreChecklist</string>
    <string name="menu_ks_ha_tang">KS HẠ TẦNG</string>
    <string name="menu_tao_loi_moi">- Tạo lỗi mới</string>
    <string name="menu_danh_sach_loi">- Danh sách lỗi</string>
    <string name="menu_khac">KHÁC</string>
    <string name="menu_kq_xac_minh">- Kết quả xác minh thông tin</string>
    <string name="menu_bao_cao_so_lieu">- Báo cáo số liệu kiểm soát</string>
    <string name="menu_thong_tin">- Thông tin</string>
    <string name="menu_dang_xuat">ĐĂNG XUẤT</string>
    <string name="copyright">Copyright © 2017 ISC FTEL</string>
    <string name="info_about">+ Giới thiệu: MobiQC là 1 bản MobiNet đầy đủ dành cho FTQ để giám sát quá trình nhân viên của đối tác thực hiện triển khai, bảo trì dịch vụ.</string>
    <string name="info_team">+ Bộ phận thực hiện: ISC (Team ThànhND7, DiệnTN2)</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="loai_hd">Loại HD</string>
    <string name="don_vi">Đơn vị</string>
    <string name="to">Tổ</string>
    <string name="loai_tc">Loại TC</string>
    <string name="tu_ngay">Từ ngày</string>
    <string name="den_ngay">Đến ngày</string>
    <string name="lam_moi">Làm mới</string>
    <string name="xem">Xem</string>
    <string name="info_contract">Danh Sách</string>
    <string name="chua_hoan_tat">Chưa hoàn tất</string>
    <string name="da_hoan_tat">Đã hoàn tất</string>
    <string name="hint_date">dd/MM/yyyy</string>
    <string name="loai_tc_1">Triển khai</string>
    <string name="loai_tc_2">Bảo trì</string>
    <string name="contract_number">Số HĐ</string>
    <string name="percent_contract">Tỉ lệ</string>
    <string name="percent_value">%1$s %2$s</string>
    <string name="contract_name">Tên HĐ</string>
    <string name="contract_address">Địa chỉ</string>
    <string name="contract_time">Thời gian hẹn</string>
    <string name="submit">Tiếp tục</string>
    <string name="contract_assign">Số HĐ được phân công</string>
    <string name="contract_finish">Số HĐ được hoàn tất</string>
    <string name="contract_instock">Số HĐ tồn</string>
    <string name="contract_over_time_48h">Số HĐ tồn hơn 48h</string>
    <string name="contract_over_time_96h">Số HĐ tồn hơn 96h</string>
    <string name="contract_instock_hi_FPT">Số HĐ tồn hiFPT</string>
    <string name="contract_up_coming">Số HĐ sắp tới hẹn</string>
    <string name="contract_over_time">Số HĐ trễ hẹn</string>
    <string name="send_email">Người nhận Email</string>
    <string name="cc_email">CC Email</string>
    <string name="example_email">email@fpt.com.vn;…</string>
    <string name="mess_validate_email_detail">Email \"%1$s\" không hợp lệ</string>
    <string name="mess_validate_email">Email không hợp lệ</string>
    <string name="add_default_email">%1$s@fpt.com.vn</string>
    <string name="default_type_email">fpt.com.vn</string>
    <string name="date_time_format">%1$s/%2$s/%3$s</string>
    <string name="error_date">Thời gian không hợp lệ!</string>
    <string name="error_calculator_date">Khoảng thời gian xem không được quá 7 ngày!</string>
    <string name="error_permission">Chưa có đơn vị quản lý, vui lòng liên hệ quản trị hệ thống để được cấp quyền.</string>
    <string name="contract_service_name">Gói DV</string>
    <string name="contract_user_name">Tên KH</string>
    <string name="contract_location">Tọa độ</string>
    <string name="contract_phone_number">Điện thoại</string>
    <string name="contract_create_date">Thời gian</string>
    <string name="contract_cable_BT">Cáp BT</string>
    <string name="contract_cable_TK">Cáp TK</string>
    <string name="contract_cable_link_1">Mối nối 1</string>
    <string name="contract_cable_link_2">Mối nối 2</string>
    <string name="contract_service">DV nâng cấp</string>
    <string name="contract_status">Tình trạng KH</string>
    <string name="contract_cable_indoor">Cáp Indoor</string>
    <string name="contract_cable_outdoor">Cáp Outdoor</string>
    <string name="contract_cable_lan">Cáp Lan</string>
    <string name="contract_cable_other">Cáp tận dụng</string>
    <string name="contract_cable_type">TS thi công</string>
    <string name="contract_modem">Modem (SL)</string>
    <string name="contract_stb">STB (SL)</string>
    <string name="contract_hd_box">HD Box</string>
    <string name="contract_deposit">Tiền đặt cọc</string>
    <string name="contract_telesales">Tư vấn Telesales</string>
    <string name="contract_draw">Bản vẽ KS</string>
    <string name="contract_error">Lỗi ban đầu</string>
    <string name="contract_note_detail">Ghi chú tại quầy</string>
    <string name="contract_note">Ghi chú</string>
    <string name="contract_detail_finish">Hoàn thành</string>
    <string name="contract_all_phone">(ALL)</string>
    <string name="cable_met">%1$d m</string>
    <string name="type_amount">%1$s (%2$d)</string>
    <string name="deposit_amount">%1$s VNĐ</string>
    <string name="wait_process">Đang xử lý. Xin vui lòng chờ!</string>
    <string name="wait_load_data">Đang tải %1$d %2$s dữ liệu.\n\nXin vui lòng chờ!</string>
    <string name="wait_up_data">Đang tải %1$d/%2$d hình ảnh lên server.\n\nXin vui lòng chờ!</string>
    <string name="group_point_info">Thông tin tập điểm</string>
    <string name="group_point_name">Tên TĐ</string>
    <string name="group_point_pop">POP-TĐ</string>
    <string name="group_point_quantity">Dung lượng</string>
    <string name="group_point_used">Đang sử dụng</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="phone_number_date">Ngày cập nhật</string>
    <string name="phone_number_sms">SMS</string>
    <string name="deployment_check_list">Phiếu Triển Khai</string>
    <string name="maintenance_check_list">Phiếu Bảo Trì</string>
    <string name="data_report">Dữ liệu</string>
    <string name="chart_report">Biểu đồ</string>
    <string name="upload_image">Upload hình ảnh</string>
    <string name="mess_upload_image">Chưa có chọn hình ảnh để upload!</string>
    <string name="mess_install_android_o">Bạn cần cung cấp quyền \"Cài đặt nguồn không xác định\" để cài đặt bản cập nhật mới nhất!</string>
    <string name="mess_out_app">Bạn không cung cấp quyền cài đặt ứng dụng.\nChương trình sẽ thoát!</string>
    <string name="mess_title_image">Hình ảnh</string>
    <string name="check_list_id">ID</string>
    <string name="mess_log_out">Bạn có muốn thoát tài khoản?</string>
    <string name="mess_error_update">Tải bản cập nhật mới thất bại!</string>
    <string name="check_list_create">Thời gian tạo</string>
    <string name="check_list_type">Loại</string>
    <string name="check_list_status">Tình trạng</string>
    <string name="mes_mail_no_send">Chưa gửi</string>
    <string name="mes_mail_send">Đã gửi</string>
    <string name="status_done">Đã xử lý</string>
    <string name="status_no_done">Chưa xử lý</string>
    <string name="check_list_last">Cập nhật cuối</string>
    <string name="check_list_user">Người cập nhật</string>
    <string name="check_list_menu_detail">Xem chi tiết</string>
    <string name="check_list_menu_error">Ghi nhận lỗi</string>
    <string name="check_list_menu_title">Bạn muốn làm gì?</string>
    <string name="error_detail_number">Phiếu triển khai</string>
    <string name="error_detail_type">Loại KS</string>
    <string name="error_detail_user">Đối tượng KS</string>
    <string name="error_detail_check">Cáp kiểm tra</string>
    <string name="error_detail_money">Tiền hòa mạng</string>
    <string name="error_detail_type_error">Nhóm lỗi</string>
    <string name="error_detail_main_error">Lỗi chính</string>
    <string name="error_detail_main_indoor">Indoor</string>
    <string name="error_detail_description">Mô tả lỗi</string>
    <string name="error_detail_note">Ghi chú</string>
    <string name="error_detail_submit">Cập nhật</string>
    <string name="create_error">Tạo lỗi</string>
    <string name="type_error">Lỗi</string>
    <string name="sub_error">Phần tử lỗi</string>
    <string name="supporter_error">Đơn vị xử lý</string>
    <string name="error_station">Đài trạm</string>
    <string name="done_error">Đã xử lý khắc phục</string>
    <string name="error_peripheral">Ngoại vi</string>
    <string name="type_KS_hot">Nóng</string>
    <string name="type_KS_cold">Nguội</string>
    <string name="type_KS_subject">Chuyên đề</string>
    <string name="type_KS_swap">Swap</string>
    <string name="type_indoor_yes">Có</string>
    <string name="type_indoor_no">Không</string>
    <string name="enter_number">0</string>
    <string name="enter_note">…</string>
    <string name="notify_off_GPS">GPS không hoạt động, bạn có muốn mở không?</string>
    <string name="notify_off_GPS_again">GPS vẫn chưa hoạt động!</string>
    <string name="error_notify">Bạn có muốn cập nhật lỗi này?</string>
    <string name="notify_no_location">Chưa có dữ liệu vị trí khách hàng. Bạn có muốn cập nhật lỗi?</string>
    <string name="notify_update_error">Khoảng cách vị trí của bạn là %1$s - %2$s.\n\n Bạn có muốn cập nhật lỗi?</string>
    <string name="notify_error_type_over">vượt mức cho phép</string>
    <string name="notify_error_type_no_update">không được cập nhật</string>
    <string name="notify_error_type_ok">trong mức cho phép</string>
    <string name="distance">Khoảng cách : %1$s</string>
    <string name="path_new_file">%1$s/MOBIQC_%2$s_%3$s.jpg </string>
    <string name="search_location">Vùng</string>
    <string name="search_branch">Chi Nhánh</string>
    <string name="search_title">Tìm kiếm</string>
    <string name="search_keyword">Nhập từ khóa chính xác</string>
    <string name="data_search_contract_number">Số hợp đồng</string>
    <string name="data_search_user_name">Tên khách hàng</string>
    <string name="data_search_phone">Số điện thoại</string>
    <string name="data_search_address_mac">Địa chỉ MAC</string>
    <string name="data_search_id">Số CMND</string>
    <string name="list_contract">Danh sách hợp đồng</string>
    <string name="result_search">Kết quả tìm kiếm</string>
    <string name="upload_image_success">Upload %1$d hình ảnh thành công.</string>
    <string name="validate_key_search">Từ khóa không được bỏ trống!</string>
    <string name="mobi_acc_no_data">Chưa có đơn vị quản lý, vui lòng liên hệ quản trị hệ thống để được cấp quyền.</string>
    <string name="send_email_error">Gửi email</string>
</resources>