<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="@dimen/_60dp"
    android:layout_marginEnd="@dimen/_20dp"
    android:layout_marginStart="@dimen/_20dp"
    android:layout_marginTop="@dimen/_60dp"
    android:background="@drawable/shape_circle_dialog_while"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <TextView
        android:id="@+id/fragDialogSingleChoice_tvTitle"
        fontPath="@string/Helvetica_Bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8dp"
        android:layout_marginTop="@dimen/_8dp"
        android:gravity="center_vertical|center_horizontal"
        android:paddingEnd="@dimen/_8dp"
        android:paddingStart="@dimen/_8dp"
        android:text="@string/send_email_error"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_18dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:background="@color/silver"/>

    <TextView
        fontPath="@string/Helvetica_Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8dp"
        android:text="@string/send_email"
        android:textColor="@color/steel"
        android:textSize="@dimen/_14dp"/>

    <EditText
        android:id="@+id/fragDialogSendEmail_tvSendMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:background="@drawable/shape_border_grey_text_view"
        android:hint="@string/example_email"
        android:maxLines="4"
        android:padding="@dimen/_8dp"
        android:textColor="@color/steel"
        android:textSize="@dimen/_13dp"
        tools:ignore="TextFields"/>

    <TextView
        fontPath="@string/Helvetica_Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8dp"
        android:text="@string/cc_email"
        android:textColor="@color/steel"
        android:textSize="@dimen/_14dp"/>

    <EditText
        android:id="@+id/fragDialogSendEmail_tvCcEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8dp"
        android:layout_marginStart="@dimen/_8dp"
        android:background="@drawable/shape_border_grey_text_view"
        android:hint="@string/example_email"
        android:maxLines="4"
        android:padding="@dimen/_8dp"
        android:textColor="@color/steel"
        android:textSize="@dimen/_13dp"
        tools:ignore="TextFields"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_marginTop="@dimen/_8dp"
        android:background="@color/silver"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragDialogSendEmail_tvCancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/action_cancel"
            android:textColor="@color/bright_red"
            android:textSize="@dimen/_17dp"/>

        <View
            android:id="@+id/fragDialogConfirm_vLineHorizontal"
            android:layout_width="@dimen/_1dp"
            android:layout_height="match_parent"
            android:background="@color/silver"/>

        <TextView
            android:id="@+id/fragDialogSendEmail_tvOK"
            android:layout_width="0dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginStart="@dimen/_8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/action_ok"
            android:textColor="@color/bright_blue"
            android:textSize="@dimen/_17dp"/>
    </LinearLayout>

</LinearLayout>