<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:focusable="true"
    tools:ignore="MissingPrefix"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/contract_number"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragDetailContract_tvObjID"
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textColor="@color/button"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_blur"
        android:orientation="horizontal"
        android:padding="@dimen/_8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/contract_name"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragDetailContract_tvName"
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textColor="@color/black_text"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="@dimen/_8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/contract_service_name"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragDetailContract_tvLocalType"
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textColor="@color/black_text"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_blur"
        android:orientation="horizontal"
        android:padding="@dimen/_8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/contract_user_name"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragDetailContract_tvFullName"
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textColor="@color/black_text"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/contract_address"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragDetailContract_tvAddress"
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textColor="@color/button"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_blur"
        android:orientation="horizontal"
        android:padding="@dimen/_8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/contract_location"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragDetailContract_tvCoordinate"
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textColor="@color/button"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/contract_phone_number"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragDetailContract_tvPhone"
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingStart="@dimen/_6dp"
            android:textColor="@color/button"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragDetailContract_tvAllPhone"
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:gravity="center"
            android:text="@string/contract_all_phone"
            android:textColor="@color/button"
            android:textSize="@dimen/_15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_blur"
        android:orientation="horizontal"
        android:padding="@dimen/_8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:text="@string/contract_create_date"
            android:textSize="@dimen/_15dp"/>

        <TextView
            android:id="@+id/fragDetailContract_tvCreateDate"
            fontPath="@string/Helvetica_Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:textColor="@color/black_text"
            android:textSize="@dimen/_15dp"/>

    </LinearLayout>

</LinearLayout>
